[tool.poetry]
name = "I do what I want"
version = "1.0.0"
description = "A little pyhton bot. Made for fun."
authors = ["F1r3w477"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
